--- a/src/Components/StickyOverlay/Overlay.css
+++ b/src/Components/StickyOverlay/Overlay.css
@@ -31,6 +31,9 @@
 }
 
 .selected{
-    /* background-color: rgb(193,157,83); */
+    background-color: rgb(193,157,83);
     /* border: 1px solid red; */
+    border: 1px solid rgb(193,157,83);
+    background-clip: content-box;
+    padding: 3px;
 }
