--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -28,8 +28,11 @@
 }
 
 .elden-ring-body-text{
+    color: white;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
     border: 2px solid gray;
     width: 90%;
     height: 90%;
@@ -41,7 +44,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     color: white;
     width: 50%;
     margin-top: 40px;
@@ -57,6 +60,49 @@
     font-size: 14px;
 }
 
+.elden-ring-body-banner p u{
+    font-size: 12px;
+}
+
 .gold-text{
     color: rgb(189,154,82);
+}
+
+.golden-order-container{
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+    height: 99%;
+    margin-top: 40px;
+    text-align: start;
+    width: 100%;
+}
+
+.golden-order-text{
+    /* border: 2px solid green; */
+    padding-left: 15px;
+    line-height: 1.5;
+    height: 100%;
+    width: 40%;
+}
+
+.go-text{
+    font-size: 18px;
+    font-weight: 400;
+    padding-right: 22px;
+}
+
+.golden-order-video{
+    background-color: black;
+    /* border: 2px solid purple; */
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    width: 56%;
+    height: 60%;
+}
+
+#elden-lord-bold{
+    font-weight: 800;
+    margin-top: 50px;
 }
