--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -5,7 +5,9 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    height: 100%
+    height: 6vh;
+    width: 100%;
+    position: fixed;
 }
 
 
