--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 .App {
   font-family: "Roboto", sans-serif;
   text-align: center;
@@ -16,7 +15,7 @@
 
 .elden-component{
   /* border: 2px solid red; */
-  height: 150vh;
+  height: 155vh;
 }
 
 .overlay-component{
@@ -25,6 +24,11 @@
 }
 
 .keyFeatures-component{
-  background-color: red;
-  height: 100vh;
+  background-attachment: fixed;
+  background-image: url('/public/images/godfried.jpg');
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 120vh;
+  width: 100%;
 }
