--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* .gold-text{
+  color: rgb(189, 154, 82);
+} */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .App {
@@ -32,6 +35,11 @@
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 120vh;
+  height: 200vh;
   width: 100%;
+}
+
+.characters-component{
+  background-color: rgba(128, 0, 128, 0.329);
+  height: 70vh;
 }
