--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -65,6 +65,7 @@
 }
 
 .gold-text {
+  margin-left: 7px;
   color: rgb(189, 154, 82);
 }
 
@@ -222,9 +223,7 @@
 }
 
 .ratings {
-  /* position: relative; */
   margin-top: 83px;
-  /* border: 2px solid purple; */
   height: 12%;
   object-fit: contain;
   width: 100%;
