--- a/src/Components/KeyFeatures/KeyFeatures.css
+++ b/src/Components/KeyFeatures/KeyFeatures.css
@@ -1,7 +1,123 @@
 .keyfeatures-container{
-    border: 2px solid red;
+    /* border: 1px solid red; */
     color: white;
     text-align: start;
     height: 90%;
+    width: 75%;
+}
+
+.keyfeatures-container h1{
+    margin-top: 0px;
+    font-size: 38px;
+}
+
+.KF-text-container{
+    /* border: 1px solid purple; */
+    height: 93%;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.KF-video-text{
+    /* border: 1px solid gray; */
+    margin-top: 20px;
+    height:33%;
+    width: 100%;
+}
+
+.KFVideo-container{
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.KFVideo-container-video{
+    /* border: 2px solid pink; */
+    width: 50%
+}
+
+.KFVideo-container video {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    z-index: -4;
+}
+
+.KFVideo-container-text{
+    /* border: 2px solid red; */
+    height: 75%;
+    width: 50%;
+    margin-top: 50px;
+    z-index: 1;
+}
+
+.KFVideo-overlap-text{
+    height: 10%;
     width: 70%;
+    margin-left: -55px;
+    /* margin-left: 55px; */
+}
+
+.KFVideo-overlap-text h2{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: rgb(189, 154, 82);
+    text-transform: uppercase;
+    font-size: 28px;
+    height: 100%;
+    margin: 0px;
+    padding-right: 20px;
+    /* text-align: center; */
+}
+
+.KFVideo-body-text p{
+    font-weight: 500;
+    margin-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.video-2-title{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: rgb(189, 154, 82);
+    padding-left: 15px;
+    margin-left: 55px;
+    /* height: 13%; */
+    width: 100%;
+}
+
+.video-2-title h2{
+    font-size: 26px;
+}
+
+.KFVideo-container-2{
+    /* border: 2px solid purple; */
+    margin-left: 40px;
+}
+
+.KF-border-bottom {
+    border: 2px solid purple;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    /* justify-content: center; */
+    height: 8%;
+    width: 90%;
+}
+
+.KF-border-bottom img{
+    /* width: 100%; */
+    height: auto;
+    /* border: 2px solid red; */
+    /* height: auto;
+    max-width: 100%; */
+    /* height: 100%; */
+    /* width: 70%; */
 }
