--- a/src/Components/Header-photo/Header.css
+++ b/src/Components/Header-photo/Header.css
@@ -1,6 +1,5 @@
 .header-container{
-    /* background-image: url('/public/images/elden-ring-new-header.jpg'); */
-    /* background-image: url('/public/images/header-animated.webm'); */
+    /* background-attachment: fixed; */
     background-position: 50% top;
     background-repeat: no-repeat;
     background-size: cover;
