--- a/src/Components/KeyFeatures/KeyFeatures.css
+++ b/src/Components/KeyFeatures/KeyFeatures.css
@@ -75,6 +75,10 @@
     /* text-align: center; */
 }
 
+.KFVideo-body-text{
+
+}
+
 .KFVideo-body-text p{
     font-weight: 500;
     margin-top: 30px;
@@ -88,9 +92,9 @@
     justify-content: flex-start;
     background-color: rgb(189, 154, 82);
     padding-left: 15px;
-    margin-left: 55px;
+    margin-left: 105px;
     /* height: 13%; */
-    width: 100%;
+    width: 90%;
 }
 
 .video-2-title h2{
@@ -103,21 +107,12 @@
 }
 
 .KF-border-bottom {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
+    margin-top: 88px;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-start;
-    /* justify-content: center; */
-    height: 8%;
-    width: 90%;
-}
-
-.KF-border-bottom img{
-    /* width: 100%; */
-    height: auto;
-    /* border: 2px solid red; */
-    /* height: auto;
-    max-width: 100%; */
-    /* height: 100%; */
-    /* width: 70%; */
+    margin-left: -16%;
+    height: 4%;
+    width: 100%;
 }
