--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,10 @@
 }
 
 .shopnow-component{
+  background-image: url("/public/images/leaves-background.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 100vh;
 }
