--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -99,6 +99,14 @@
   height: 60%;
 }
 
+.icon-player{
+  /* border: 200px solid red; */
+  fill: rgb(189, 154, 82);
+  position: absolute;
+  left: 66%;
+  top: 135%;
+}
+
 .golden-order-video video {
   width: 100%;
 }
