--- a/src/Components/Characters/Characters.css
+++ b/src/Components/Characters/Characters.css
@@ -1,11 +1,21 @@
 .characters-container{
-    /* border: 2px solid darkblue; */
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: 100%;
     width: 100%;
+}
+
+.characters-title{
+    /* border: 2px solid red; */
+    font-size:30px;
+    left: 0px;
+    margin-bottom: 700px;
+    margin-left: 100px;
+    /* bottom: 100%; */
+    /* bottom: 0px; */
+    position: absolute;
 }
 
 .character{
