--- a/src/Components/ShopNow/Shopnow.css
+++ b/src/Components/ShopNow/Shopnow.css
@@ -1,151 +1,207 @@
-.shopnow-container{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    border: 2px solid purple;
-    height: 100%;
+.shopnow-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  /* border: 2px solid purple; */
+  height: 100%;
 }
 
-.top-row{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* border: 2px solid red; */
-    margin-top: 2%;
-    height: 10%;
-    width: 90%;
+.top-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 2px solid red; */
+  margin-top: 2%;
+  height: 10%;
+  width: 90%;
 }
 
-.shopnow{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.shopnow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.shopnow h1{
-    position: absolute;
-    margin-left: 140px;
+.shopnow h1 {
+  position: absolute;
+  margin-left: 140px;
 }
 
-.country{
-    font-size: 12px;
+.country {
+  font-size: 12px;
 }
 
 .country .dropdown-arrow {
-    -webkit-filter: invert(1);
+  -webkit-filter: invert(1);
 }
 
-.select-country{
-    background-color: transparent;
-    border-width: 0 0 1px;    
-    color: white;
-    padding-bottom: 10px;
-    padding-right: 40px;
+.select-country {
+  background-color: transparent;
+  border-width: 0 0 1px;
+  color: white;
+  padding-bottom: 10px;
+  padding-right: 40px;
 }
 
-.platform-row{
-    border: 2px solid rebeccapurple;
-    width: 30%;
-    /* height: 15%; */
+.platform-row {
+  /* border: 2px solid rebeccapurple; */
+  width: 30%;
+  /* height: 15%; */
 }
 
-.platform-row-consoles{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.platform-row-consoles {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.pr-console{
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+.pr-console {
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-.comparison-row{
-    border: 2px solid red;
-    width: 65%;
-    height: 65%;
+.comparison-row {
+  /* border: 2px solid red; */
+  width: 70%;
+  height: 65%;
 }
 
-.comparison-nav-arrows{
-    border: 2px solid purple;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
+.comparison-nav-arrows {
+  /* border: 2px solid purple; */
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.out-of-5{
-    opacity: 0.5;
-    font-size: 20px;
+.out-of-5 {
+  opacity: 0.5;
+  font-size: 20px;
 }
 
-.comparison-nav-arrows h1{
-    margin-left: 20px;
-    margin-right: 20px;
+.comparison-nav-arrows h1 {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.nav-arrow{
-    background-color: rgb(189, 154, 82);
-    border-radius: 50%;
-    font-size: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 40px;
+.nav-arrow {
+  background-color: rgb(189, 154, 82);
+  border-radius: 50%;
+  font-size: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
 }
 
-.comparison-chart h3{
-    margin: 0px;
-    margin-bottom: 8px;
+.comparison-chart h3 {
+  margin: 0px;
+  margin-bottom: 8px;
 }
 
-.comparison-cards{
-    border: 2px solid gray;
-    display: flex;
+.comparison-cards {
+  /* border: 2px solid gray; */
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-grow: 1;
+  height: 550px;
+}
+
+.comparison-card {
+  /* border: 2px solid red; */
+  width: 32%;
+  height: 100%;
+}
+
+.comparison-card-photo {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* width: 100%; */
+  height: 45%;
+}
+
+.card1 {
+  background-image: url("/public/images/keyart.jpg");
+}
+
+.comparison-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: inherit;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  font-weight: bolder;
+  margin-top: 15px;
+  width: 50%;
+  padding: 17px;
+}
+
+.official-store {
+  background-color: rgb(189, 154, 82);
+  border: none;
+}
+
+.comparison-shop-SVG {
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+  height: 20px;
+  width: 20px;
+}
+
+.card2 {
+  background-image: url("/public/images/keyart2.jpg");
+}
+
+.card3 {
+  background-image: url("/public/images/keyart3.jpg");
+}
+
+.comparison-card-text {
+  background-image: url("/public/images/retailers.jpg");
+  background-repeat: no-repeat;
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+  align-items: center;
+  height: 55%;
+}
+
+.comparison-details {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  border: 1px solid white;
+  border-width: 0 0 1px 0;
+  /* border: 2px solid red; */
+  margin-bottom: 20px;
+  width: 90%;
+  height: 100%;
+}
+
+.comparison-details h4 {
+  margin: 0px;
+  padding-bottom: 5px;
+  /* display: flex;
     justify-content: space-between;
-    flex-direction: row;
-    flex-grow: 1;
-    height: 480px
+    align-items: center; */
 }
 
-.comparison-card{
-    /* border: 2px solid red; */
-    width: 30%;
-    height: 100%;
-}
-
-.comparison-card-photo{
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* width: 100%; */
-    height: 45%
-}
-
-.card1{
-    background-image: url('/public/images/keyart.jpg');
-}
-
-.card2{
-    background-image: url('/public/images/keyart2.jpg');
-}
-
-.card3{
-    background-image: url('/public/images/keyart3.jpg');
-}
-
-.comparison-card-text{
-    background-image: url('/public/images/retailers.jpg');
-    background-repeat: no-repeat;
-    border: 2px solid green;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 55%;
+.comparison-details p {
+  align-self: flex-end;
+  font-size: 22px;
+  margin: 5px;
 }
