--- a/src/Components/ShopNow/Shopnow.css
+++ b/src/Components/ShopNow/Shopnow.css
@@ -13,7 +13,6 @@
   justify-content: space-between;
   align-items: center;
   /* border: 2px solid red; */
-  margin-top: 2%;
   height: 10%;
   width: 90%;
 }
@@ -65,10 +64,14 @@
   margin-right: 10px;
 }
 
+.pr-console-xbox{
+    background-color: rgb(189, 154, 82);
+}
+
 .comparison-row {
   /* border: 2px solid red; */
   width: 70%;
-  height: 65%;
+  height: 35%;
 }
 
 .comparison-nav-arrows {
@@ -204,4 +207,77 @@
   align-self: flex-end;
   font-size: 22px;
   margin: 5px;
+}
+
+.elegant-border-row{
+    background-image: url('/public/images/border-leaf.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 5%;
+    margin-top: 100px;
+    width: 55%;
+}
+
+.guides-advice{
+    border: 2px solid red;
+    margin-top: 30px;
+    height: 100%;
+    width: 60%;
+}
+
+.guides-title h1{
+    color: rgb(201,183,107);
+}
+
+.guides-title p {
+    font-weight: bold;
+}
+
+.guide-cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid purple;
+    margin-top: 25px;
+    height: 8%;
+}
+
+.guide-card{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* border: 1px solid gray; */
+    /* margin-top: 15px; */
+    height: 98%;
+    width: 33%;
+}
+
+.guide-card-1{
+    background-image: url('/public/images/guide/guide-cover-1.png');
+}
+
+.guide-card-2{
+    background-image: url('/public/images/guide/guide-cover-2.png');
+}
+
+.guide-card-3{
+    background-image: url('/public/images/guide/guide-cover-3.png');
+}
+
+.guides-button{
+    border: 2px solid red;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.guides-button button{
+    /* border: 2px solid red; */
+    border:none;
+    border-radius: 8px;
+    background-color: rgb(189, 154, 82);
+    color: white;
+    padding: 20px;
+    width: 200px;
 }
