--- a/src/Components/StickyOverlay/Overlay.css
+++ b/src/Components/StickyOverlay/Overlay.css
@@ -5,7 +5,7 @@
     bottom: 0px;
     right: 0px;
     width: 6%;
-
+    z-index: 100;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
