--- a/src/Components/ShopNow/Shopnow.css
+++ b/src/Components/ShopNow/Shopnow.css
@@ -210,17 +210,27 @@
 }
 
 .elegant-border-row{
-    background-image: url('/public/images/border-leaf.png');
+  /* background-image: url('/public/images/border-leaf.png'); */
+  /* border: 12px solid green; */
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     height: 5%;
-    margin-top: 100px;
+    /* margin-top: 20px; */
     width: 55%;
+  }
+  
+  .elegant-border{
+    background-image: url('/public/images/border-leaf.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 .guides-advice{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-top: 30px;
     height: 100%;
     width: 60%;
@@ -238,7 +248,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     margin-top: 25px;
     height: 8%;
 }
@@ -266,8 +276,8 @@
 }
 
 .guides-button{
-    border: 2px solid red;
-    margin-top: 30px;
+    /* border: 2px solid red; */
+    margin-top: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -278,6 +288,93 @@
     border-radius: 8px;
     background-color: rgb(189, 154, 82);
     color: white;
-    padding: 20px;
+    padding: 18px;
     width: 200px;
+}
+
+.elegant-space-container{
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  width: 100%
+}
+
+.elegant-space{
+  background-image: url(/public/images/guide/ornament-icon-feather.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* border: 2px solid red; */
+  width: 50%;
+  height: 100px;
+}
+
+.tarnished-text-container{
+  /* border: 2px solid red; */
+  margin-top: 50px;
+  height: 400px;
+}
+
+.tarnished-text{
+  font-weight: bold;
+}
+
+.guide-screenshots{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* border: 2px solid purple; */
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 480px;
+}
+
+.guide-screenshots .elegant-border{
+  /* border: 2px solid pink; */
+  width: 100%;
+  height: 100px;
+}
+
+.screenshots-container{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  /* border: 2px solid pink; */
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /* padding-top: 20px; */
+  /* padding-bottom: 20px; */
+  width: 150%;
+  height: 100%;
+}
+
+.screenshots{
+  /* border: 2px solid red; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 32.5%;
+}
+
+.screenshot-1{
+  background-image: url(/public/images/guide/screenshot-1.jpg);
+}
+
+.screenshot-2{
+  background-image: url(/public/images/guide/screenshot-2.jpg);
+}
+
+.screenshot-3{
+  background-image: url(/public/images/guide/screenshot-3.jpg);
+}
+
+.guide-text-under-screenshots{
+  /* border: 2px solid purple; */
+  font-weight: 500;
+  height: 420px;
+  width: 100%;
 }
