--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -101,6 +101,7 @@
 
 .icon-player{
   /* border: 200px solid red; */
+  cursor: pointer;
   fill: rgb(189, 154, 82);
   position: absolute;
   left: 68%;
@@ -108,6 +109,7 @@
 }
 
 .golden-order-video video {
+  cursor: pointer;
   width: 100%;
 }
 
@@ -174,7 +176,6 @@
 }
 
 .date-text {
-  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   font-size: 13px;
@@ -191,13 +192,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   border: 1px solid white;
   border-radius: 5px;
+  cursor: pointer;
   height: 35%;
-  padding: 10px;
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 0px;
+  padding: 10px;
 }
 
 .ps5{
