--- a/src/Components/ShopNow/Shopnow.css
+++ b/src/Components/ShopNow/Shopnow.css
@@ -211,13 +211,13 @@
 
 .elegant-border-row{
   /* background-image: url('/public/images/border-leaf.png'); */
-  /* border: 12px solid green; */
+  /* border: 10px solid green; */
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    height: 5%;
+    height: 3%;
     /* margin-top: 20px; */
-    width: 55%;
+    width: 60%;
   }
   
   .elegant-border{
@@ -232,7 +232,7 @@
 .guides-advice{
     /* border: 2px solid red; */
     margin-top: 30px;
-    height: 100%;
+    height: 80%;
     width: 60%;
 }
 
@@ -251,7 +251,7 @@
     align-items: center;
     /* border: 2px solid purple; */
     margin-top: 25px;
-    height: 8%;
+    height: 180px;
 }
 
 .guide-card{
@@ -260,7 +260,7 @@
     background-position: center;
     /* border: 1px solid gray; */
     /* margin-top: 15px; */
-    height: 98%;
+    height: 100%;
     width: 33%;
 }
 
@@ -378,4 +378,14 @@
   font-weight: 500;
   height: 420px;
   width: 100%;
+}
+
+.news-component-container{
+  margin-top: 200px;
+  height: 170vh;
+  width: 90%;
+}
+
+.follow-us-component-container{
+  border: 2px solid purple;
 }
