--- a/src/Components/ShopNow/Shopnow.css
+++ b/src/Components/ShopNow/Shopnow.css
@@ -381,11 +381,12 @@
 }
 
 .news-component-container{
-  margin-top: 200px;
+  margin-top: 100px;
+  margin-bottom: 40px;
   height: 170vh;
   width: 90%;
 }
 
 .follow-us-component-container{
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
 }
