--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -1,5 +1,4 @@
 .navbar-container {
-  /* border: 2px solid rgb(255, 255, 255); */
   background-color: rgb(255, 173, 0);
   display: flex;
   justify-content: space-between;
@@ -12,7 +11,6 @@
 }
 
 .first-two-container {
-  border: 2px solid red;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -23,7 +21,6 @@
 
 .brand-logo {
   background-image: url("/public/images/bandai-logo.png");
-  /* border: 2px solid red; */
   /* background-size: cover; */
   background-position: 50% 52%;
   background-size: cover;
@@ -59,7 +56,6 @@
 }
 
 .search-container {
-  border: 2px solid purple;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -219,7 +215,7 @@
   }
 
   .search-container {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     width: 20%;
   }
 
