--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  height: 6vh;
+  height: 58px;
   width: 100%;
   position: fixed;
   z-index: 100;
