--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -202,6 +202,11 @@
 }
 
 @media screen and (max-width: 480px) {
+
+  .navbar-container{
+    width: 100vw;
+  }
+  
   .brand-logo {
     display: none;
   }
