--- a/src/App.css
+++ b/src/App.css
@@ -11,16 +11,17 @@
 
 .navbar-component{
   height: 58px;
+  max-width: 100vw;
 }
 
 .header-component{
   /* border: 2px solid red; */
-  width: 100vw;
+  max-width: 100vw;
   height: 630px;
 }
 
 .elden-component{
-  height: 155vh;
+  height: 1500px;
 }
 
 .overlay-component{
@@ -38,7 +39,7 @@
   background-position: 50% 30%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 200vh;
+  height: 1940px;
   width: 100%;
 }
 
@@ -48,7 +49,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 920px;
 }
 
 .shopnow-component{
