--- a/src/Components/StickyOverlay/Overlay.css
+++ b/src/Components/StickyOverlay/Overlay.css
@@ -1,10 +1,10 @@
 .overlay-container{
     /* border: 2px solid purple; */
-    height: 72vh;
+    height: 690px;
     position: fixed;
     bottom: 0px;
     right: 0px;
-    width: 6%;
+    width: 100px;
     z-index: 100;
     display: flex;
     flex-direction: column;
