--- a/src/App.css
+++ b/src/App.css
@@ -58,5 +58,5 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 450vh;
+  height: 4000px;
 }
