--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -70,7 +70,7 @@
 }
 
 .golden-order-container {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: space-between;
   height: 99%;
@@ -99,14 +99,6 @@
   height: 60%;
 }
 
-.icon-player{
-  /* border: 200px solid red; */
-  cursor: pointer;
-  fill: rgb(189, 154, 82);
-  position: absolute;
-  left: 68%;
-  top: 134%;
-}
 
 .golden-order-video video {
   cursor: pointer;
@@ -114,14 +106,14 @@
 }
 
 .video-border img {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
   position: absolute;
   /* height: 0%; */
   /* border: 2px solid red; */
   margin-left: -2%;
-  margin-top: -18px;
-  width: 31%;
+  margin-top: -1%;
+  max-width: 33%;
 }
 
 .video-border img:hover {
@@ -133,8 +125,19 @@
   /* border: 2px solid red; */
   display: flex;
   justify-content: flex-start;
-  margin-left: 45%;
+  margin-left: 40%;
   margin-top: -5px;
+}
+
+.icon-player {
+  /* border: 200px solid red; */
+  cursor: pointer;
+  fill: rgb(189, 154, 82);
+  position: absolute;
+  margin-top: 12%;
+  margin-left:-27%;
+  /* left: 68%;
+  top: 134%; */
 }
 
 #elden-lord-bold {
@@ -203,15 +206,15 @@
   padding: 10px;
 }
 
-.ps5{
-    padding-left: 14px;
+.ps5 {
+  padding-left: 14px;
 }
 
 .pc {
   width: 50px;
 }
 
-.shop-now-container{
+.shop-now-container {
   /* background-color: ; */
   /* border: 2px solid red; */
   display: flex;
@@ -223,7 +226,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  background-color:rgb(193,157,83);
+  background-color: rgb(193, 157, 83);
   border: none;
   border-radius: 8px;
   color: white;
@@ -233,16 +236,16 @@
 
 .shop-now-container button:hover {
   background-color: inherit;
-  border: 1px solid rgb(193,157,83);
+  border: 1px solid rgb(193, 157, 83);
   /* color:rgb(193,157,83); */
-  -webkit-transition: color .5s;
-  -moz-transition:    color .5s;
-  -ms-transition:     color .5s;
-  -o-transition:      color .5s;
-  transition:         all .5s;
+  -webkit-transition: color 0.5s;
+  -moz-transition: color 0.5s;
+  -ms-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: all 0.5s;
 }
-  .ratings {
-    border: 2px solid red;
+.ratings {
+  border: 2px solid red;
   margin-top: 83px;
   height: 200px;
   object-fit: contain;
