--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -95,9 +95,13 @@
 
 .golden-order-text {
   border: 2px solid green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-left: 15px;
   line-height: 1.5;
-  height: 91%;
+  padding: 5px;
   width: 40%;
 }
 
@@ -161,7 +165,7 @@
 }
 
 .awards {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 100px;
   width: 100%;
 }
@@ -173,7 +177,8 @@
 }
 
 .console-container {
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
+  /* object-fit: contain; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -182,7 +187,7 @@
 }
 
 .consoles {
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -212,12 +217,12 @@
   border: 1px solid white;
   border-radius: 5px;
   cursor: pointer;
-  height: 30px;
+  /* height: 30px; */
   width: auto;
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 0px;
-  padding: 10px;
+  padding: 15px;
 }
 
 .ps5 {
@@ -274,6 +279,61 @@
 .ratings img{
   object-fit: cover;
   max-width: 80%;
+}
+
+
+@media screen and (max-width:1468px){
+  .console-container {
+    border: 2px solid gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 20px;
+    /* height: 150px; */
+    /* margin-top: 40px; */
+    width: 100%;
+    margin:40px;
+  }
+  
+  .consoles {
+    /* border: 2px solid purple; */
+    /* display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; */
+    /* margin-top: 20px; */
+    flex-wrap: wrap;
+    height:100%;
+    width: 100%;
+  }
+
+  .date-text {
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    /* height: 6%; */
+    width: 20%;
+    padding: 0px;
+    margin: 0px;
+  }
+  
+  .console-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    /* height: 30px; */
+    width: auto;
+    /* margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 0px; */
+    margin-bottom: 8px;
+    padding: 15px;
+  }
+  
 }
 
 @media screen and (max-width:768px) {
